unpackaged/main/default/objects/pse__Resource_Request__c/fields/Bill_Rate_Variance__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Variance__c</fullName>
    <formula>IF(ISNULL(pse__Requested_Bill_Rate__c),0,
(pse__Requested_Bill_Rate__c - pse__Rate_Card__r.pse__Suggested_Bill_Rate__c ) /  pse__Rate_Card__r.pse__Suggested_Bill_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Rate Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>