unpackaged/main/default/objects/pse__Resource_Request__c/fields/ffps_ihs__FpBillRate__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__FpBillRate__c</fullName>
    <description>The custom bill rate for fixed price Projects.</description>
    <inlineHelpText>The custom bill rate for fixed price Projects.</inlineHelpText>
    <label>FP Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>