unpackaged/main/default/objects/pse__Resource_Request__c/fields/ffps_ihs__FpRevenue__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__FpRevenue__c</fullName>
    <formula>ffps_ihs__FpBillRate__c * pse__SOW_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FP Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>