unpackaged/main/default/objects/pse__Resource_Request__c/fields/FFX_Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>FFX_Cost_Rate_Amount__c</fullName>
    <formula>pse__SOW_Hours__c * pse__Staffer_Resource__r.pse__Default_Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>