unpackaged/main/default/objects/pse__Resource_Request__c/fields/FFX_Generic_Resource__c.field-meta.xml
<CustomField>
    <fullName>FFX_Generic_Resource__c</fullName>
    <formula>if( pse__Staffer_Resource__r.FFX_Generic_Resource__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Resource ?</label>
    <type>Checkbox</type>
</CustomField>