unpackaged/main/default/objects/pse__Resource_Request__c/fields/FFX_Planner_Color__c.field-meta.xml
<CustomField>
    <fullName>FFX_Planner_Color__c</fullName>
    <description>Field used on Planners to show color coding.</description>
    <formula>IF( ISPICKVAL(pse__Project__r.pse__Billing_Type__c, "Time and Materials")  &amp;&amp; ISPICKVAL(pse__Project__r.pse__Project_Type__c, "Customer Project") , "lightBlue",
IF( ISPICKVAL(pse__Project__r.pse__Billing_Type__c, "Fixed Price")  &amp;&amp; ISPICKVAL(pse__Project__r.pse__Project_Type__c, "Customer Project"), "lightGreen", ""))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planner Color</label>
    <type>Text</type>
</CustomField>