unpackaged/main/default/objects/pse__Resource_Request__c/fields/FFX_Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>FFX_Project_Owner_Email__c</fullName>
    <label>Project Owner Email</label>
    <type>Email</type>
</CustomField>