unpackaged/main/default/objects/pse__Resource_Request__c/fields/Project_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Billing_Type__c</fullName>
    <formula>TEXT(pse__Project__r.pse__Billing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Billing Type</label>
    <type>Text</type>
</CustomField>