unpackaged/main/default/objects/pse__Resource_Request__c/fields/Project_Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Project_Is_Billable__c</fullName>
    <formula>pse__Project__r.pse__Is_Billable__c = False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Is Billable</label>
    <type>Checkbox</type>
</CustomField>