unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>psa_Discount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set if the RR has gone through the automated approval process for discounts and has been approved.</description>
    <label>Discount Approved?</label>
    <type>Checkbox</type>
</CustomField>