unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_report__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Project_Name__c</fullName>
    <formula>pse__Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>