unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_Submitted__c.field-meta.xml
<CustomField>
    <fullName>psa_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>