unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_Suggested_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>psa_Suggested_Bill_Rate__c</fullName>
    <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; ' ' &amp; TEXT(pse__Rate_Card__r.pse__Suggested_Bill_Rate__c)</formula>
    <label>Suggested Bill Rate</label>
    <type>Text</type>
</CustomField>