unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_Suggested_Bill_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>psa_Suggested_Bill_Rate_Number__c</fullName>
    <label>IHS Suggested Bill Rate Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>