unpackaged/main/default/objects/pse__Resource_Request__c/fields/psa_Time_Delay__c.field-meta.xml
<CustomField>
    <fullName>psa_Time_Delay__c</fullName>
    <formula>NOW()-((1/1440)*59)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Delay</label>
    <type>DateTime</type>
</CustomField>