unpackaged/main/default/objects/pse__Resource_Request__c/fields/psaws__Close_To_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>psaws__Close_To_Start_Date__c</fullName>
    <formula>pse__Start_Date__c &lt;= TODAY() + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close To Start Date</label>
    <type>Checkbox</type>
</CustomField>