unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Account_Link__c.field-meta.xml
<CustomField>
    <fullName>pse__Account_Link__c</fullName>
    <description>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</description>
    <formula>IF(ISNULL(pse__AccountId__c),'',HYPERLINK('/'&amp;pse__AccountId__c, IF(ISNULL(pse__Account__c),pse__AccountId__c,pse__Account__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</inlineHelpText>
    <label>Account Link</label>
    <type>Text</type>
</CustomField>