unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Average_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Average_Cost_Rate__c</fullName>
    <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; ' ' &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cost Rate</label>
    <type>Text</type>
</CustomField>