unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Average_Cost_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Average_Cost_Rate_Number__c</fullName>
    <label>Average Cost Rate Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>