unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Exclude_from_Planners__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Planners__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected, excludes the resource request from the Resource and Project Planners. Any excluded resource requests are not included in totals calculations and color coding in Planners.</inlineHelpText>
    <label>Exclude from Planners</label>
    <type>Checkbox</type>
</CustomField>