unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Exclude_From_Utilization__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_From_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, this resource request is excluded from utilization calculations.</description>
    <inlineHelpText>If selected, this resource request is excluded from utilization calculations.</inlineHelpText>
    <label>Exclude from Utilization</label>
    <type>Checkbox</type>
</CustomField>