unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Information_for_Prospective_Candidates__c.field-meta.xml
<CustomField>
    <fullName>pse__Information_for_Prospective_Candidates__c</fullName>
    <description>Details to help prospective candidates decide whether to self-nominate for this resource request.</description>
    <inlineHelpText>Details to help prospective candidates decide whether to self-nominate for this resource request.</inlineHelpText>
    <label>Information for Prospective Candidates</label>
    <type>TextArea</type>
</CustomField>