unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Primary_Skill_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Primary_Skill_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Skill / Certification</label>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>