unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>pse__Rate_Card__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>