unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Requested_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Requested_Bill_Rate__c</fullName>
    <inlineHelpText>Request an hourly bill rate</inlineHelpText>
    <label>Requested Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>