unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Self_Nomination_Deadline__c.field-meta.xml
<CustomField>
    <fullName>pse__Self_Nomination_Deadline__c</fullName>
    <description>The closing date for self-nominations.</description>
    <inlineHelpText>The closing date for self-nominations.</inlineHelpText>
    <label>Self-Nomination Deadline</label>
    <type>Date</type>
</CustomField>