unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Staffed_Related_Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffed_Related_Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related resource request, which is staffed.</description>
    <inlineHelpText>Lookup to the related resource request, which is staffed.</inlineHelpText>
    <label>Staffed Related Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Resource Requests (Staffed Related Resource Request)</relationshipLabel>
    <relationshipName>Resource_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>