unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Ready to Staff</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Rejected / Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>