unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Utilization_Run__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Run__c</fullName>
    <description>The ID of the utilization run that most recently processed this resource request.</description>
    <inlineHelpText>The ID of the utilization run that most recently processed this resource request.</inlineHelpText>
    <label>Utilization Run</label>
    <length>255</length>
    <type>Text</type>
</CustomField>