unpackaged/main/default/objects/pse__Resource_Request__c/fields/pse__Work_PostalCode_PSA__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_PostalCode_PSA__c</fullName>
    <label>Work Zip/Postal Code (PSA)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>