unpackaged/main/default/objects/pse__Resource_Request__c/fields/Region_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Region_Owner_Email__c</fullName>
    <label>Region Owner Email</label>
    <type>Email</type>
</CustomField>