unpackaged/main/default/objects/pse__Resource_Request__c/fields/Resource_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager_Email__c</fullName>
    <label>Resource Manager Email</label>
    <type>Email</type>
</CustomField>