unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/Cannot_Assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Assign</fullName>
    <active>true</active>
    <description>Cannot Assign if Project Prob is not 75%</description>
    <errorConditionFormula>AND(
				ISCHANGED(pse__Assignment__c)
				,pse__Project__r.Probability__c &lt;0.75
				,psa_Discount_Approved__c= FALSE
				,NOT(pse__Project__r.RecordType.DeveloperName = 'Internal')  
)</errorConditionFormula>
    <errorMessage>You cannot assign this RR until the Project reaches 75% and the RR is approved.</errorMessage>
</ValidationRule>