unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/pse__Check_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Check_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
    <errorDisplayField>pse__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot occur before Start Date</errorMessage>
</ValidationRule>