unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/pse__Check_Opp_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Check_Opp_Project_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    LEN(pse__Opportunity__c) &gt; 0,
    LEN(pse__Project__c) &gt; 0,
    LEN(pse__Project__r.pse__Opportunity__c) &gt; 0,
    pse__Project__r.pse__Opportunity__c != pse__Opportunity__c
)</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>The opportunity on the resource request does not match the opportunity on the project</errorMessage>
</ValidationRule>